--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Agency Consent Form</title>
+<title>Agency Information Form</title>
 
 <style>
 body{
