--- a/index.html
+++ b/index.html
@@ -1,103 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Agency Information Consent Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f6f8;
-        }
-        .container {
-            max-width: 500px;
-            margin: 40px auto;
-            background: #fff;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h2 {
-            text-align: center;
-        }
-        label {
-            font-weight: bold;
-        }
-        input, button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 6px;
-            margin-bottom: 15px;
-        }
-        .consent {
-            font-size: 13px;
-            background: #f1f1f1;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 15px;
-        }
-        button {
-            background: #007bff;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #0056b3;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Agency Consent Form</title>
+
+<style>
+body{
+    font-family: "Segoe UI", Arial, sans-serif;
+    background: linear-gradient(135deg,#e9eff5,#f7f9fb);
+}
+.container{
+    max-width:520px;
+    margin:50px auto;
+    background:#fff;
+    padding:30px;
+    border-radius:12px;
+    box-shadow:0 15px 30px rgba(0,0,0,.1);
+}
+h2{
+    text-align:center;
+    letter-spacing:1px;
+}
+label{
+    font-weight:600;
+    font-size:14px;
+}
+input[type=text]{
+    width:100%;
+    padding:12px;
+    border-radius:8px;
+    border:1px solid #ccc;
+    margin-top:6px;
+    margin-bottom:15px;
+    text-transform:uppercase;
+}
+input:focus{
+    outline:none;
+    border-color:#007bff;
+}
+.consent{
+    background:#f1f5f9;
+    padding:12px;
+    border-radius:8px;
+    font-size:13px;
+}
+.consent input{
+    width:auto;
+    margin-right:8px;
+}
+button{
+    width:100%;
+    padding:12px;
+    border-radius:8px;
+    border:none;
+    font-size:15px;
+    font-weight:bold;
+    background:#007bff;
+    color:#fff;
+    cursor:pointer;
+    opacity:.5;
+}
+button.enabled{
+    opacity:1;
+}
+button:disabled{
+    cursor:not-allowed;
+}
+.footer{
+    text-align:center;
+    font-size:12px;
+    margin-top:20px;
+    color:#777;
+}
+.footer a{
+    color:#777;
+    text-decoration:none;
+}
+.footer a:hover{text-decoration:underline;}
+.hidden{display:none;}
+.success{
+    text-align:center;
+    font-size:16px;
+}
+</style>
 </head>
+
 <body>
 
-<div class="container">
-    <h2>Agency Information Form</h2>
+<!-- FORM PAGE -->
+<div class="container" id="formPage">
+<h2>AGENCY CONSENT FORM</h2>
 
-    <label>Agency Name</label>
-    <input type="text" id="agency" required>
+<label>AGENCY NAME</label>
+<input id="agency" type="text" required>
 
-    <label>PIC Name 1</label>
-    <input type="text" id="pic1" required>
+<label>PIC NAME 1</label>
+<input id="pic1" type="text" required>
 
-    <label>PIC Name 2</label>
-    <input type="text" id="pic2">
+<label>PIC NAME 2</label>
+<input id="pic2" type="text">
 
-    <label>Contact No</label>
-    <input type="text" id="contact" required>
+<label>CONTACT NO</label>
+<input id="contact" type="text" placeholder="+60123456789" oninput="formatPhone(this)" required>
 
-    <label>WhatsApp No</label>
-    <input type="text" id="whatsapp" required>
+<label>WHATSAPP NO</label>
+<input id="whatsapp" type="text" placeholder="+60123456789" oninput="formatPhone(this)" required>
 
-    <div class="consent">
-        <b>Consent Information</b><br><br>
-        By submitting this form, you hereby confirm that all information provided is true, accurate, 
-        and voluntarily given. You consent to the collection, storage, and use of your information 
-        for official communication and record purposes in accordance with applicable data protection laws.
+<div class="consent">
+    <label>
+        <input type="checkbox" id="agree" onchange="toggleSend()">
+        I hereby confirm that the information provided is true and I give my consent
+        for this information to be collected and used for official purposes.
+    </label>
+</div>
+
+<br>
+<button id="sendBtn" disabled onclick="sendData()">SEND</button>
+
+<div class="footer">
+    © <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> 
+    <span id="year"></span>
+</div>
+</div>
+
+<!-- SUCCESS PAGE -->
+<div class="container hidden" id="successPage">
+    <div class="success">
+        ✅<br><br>
+        <b>YOUR INFORMATION HAS BEEN SUCCESSFULLY SENT</b><br>
+        THANK YOU
     </div>
-
-    <button onclick="sendData()">Send</button>
+    <div class="footer">
+        © <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> 
+        <span id="year2"></span>
+    </div>
 </div>
 
 <script>
-function sendData() {
+// YEAR AUTO
+const y = new Date().getFullYear();
+year.innerText = y;
+year2.innerText = y;
+
+// ENABLE SEND
+function toggleSend(){
+    const btn = document.getElementById("sendBtn");
+    const agree = document.getElementById("agree").checked;
+    btn.disabled = !agree;
+    btn.classList.toggle("enabled", agree);
+}
+
+// PHONE FORMAT
+function formatPhone(el){
+    let v = el.value.replace(/\D/g,'');
+    if(v.startsWith('0')) v = '6' + v;
+    if(!v.startsWith('6')) v = '6' + v;
+    el.value = '+' + v;
+}
+
+// SEND DATA
+function sendData(){
     const data = {
-        agency: document.getElementById("agency").value,
-        pic1: document.getElementById("pic1").value,
-        pic2: document.getElementById("pic2").value,
-        contact: document.getElementById("contact").value,
-        whatsapp: document.getElementById("whatsapp").value
+        agency: agency.value.toUpperCase(),
+        pic1: pic1.value.toUpperCase(),
+        pic2: pic2.value.toUpperCase(),
+        contact: contact.value,
+        whatsapp: whatsapp.value
     };
 
-    fetch("YOUR_WEB_APP_URL_HERE", {
-        method: "POST",
-        body: JSON.stringify(data)
+    fetch("YOUR_WEB_APP_URL_HERE",{
+        method:"POST",
+        body:JSON.stringify(data)
     })
-    .then(response => response.text())
-    .then(result => {
-        alert("Your information has been successfully sent. Thank you.");
-        document.querySelector("form")?.reset();
+    .then(() => {
+        formPage.classList.add("hidden");
+        successPage.classList.remove("hidden");
     })
-    .catch(error => {
-        alert("Error submitting data.");
-        console.error(error);
+    .catch(()=>{
+        alert("Submission failed. Please try again.");
     });
 }
 </script>
