--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
 <title>Agency Consent Form</title>
 
 <style>
+/* ===== BASE ===== */
 body{
-    font-family: "Segoe UI", Arial, sans-serif;
-    background: linear-gradient(135deg,#e9eff5,#f7f9fb);
+    margin:0;
+    font-family:"Segoe UI", Arial, sans-serif;
+    background:linear-gradient(135deg,#eef2f7,#f8fafc);
 }
 .container{
     max-width:520px;
     margin:50px auto;
     background:#fff;
     padding:30px;
-    border-radius:12px;
-    box-shadow:0 15px 30px rgba(0,0,0,.1);
+    border-radius:14px;
+    box-shadow:0 20px 35px rgba(0,0,0,.12);
 }
 h2{
     text-align:center;
     letter-spacing:1px;
+    margin-bottom:20px;
 }
 label{
     font-weight:600;
@@ -33,11 +36,14 @@ input[type=text]{
     margin-top:6px;
     margin-bottom:15px;
     text-transform:uppercase;
+    font-size:14px;
 }
 input:focus{
     outline:none;
     border-color:#007bff;
 }
+
+/* ===== CONSENT ===== */
 .consent{
     background:#f1f5f9;
     padding:12px;
@@ -46,95 +52,144 @@ input:focus{
 }
 .consent input{
     width:auto;
-    margin-right:8px;
+    margin-right:6px;
 }
+
+/* ===== BUTTON ===== */
 button{
     width:100%;
-    padding:12px;
+    padding:13px;
     border-radius:8px;
     border:none;
     font-size:15px;
     font-weight:bold;
     background:#007bff;
     color:#fff;
-    cursor:pointer;
-    opacity:.5;
+    opacity:.45;
+    cursor:not-allowed;
 }
 button.enabled{
     opacity:1;
+    cursor:pointer;
 }
-button:disabled{
-    cursor:not-allowed;
-}
+
+/* ===== FOOTER ===== */
 .footer{
     text-align:center;
     font-size:12px;
-    margin-top:20px;
+    margin-top:22px;
     color:#777;
 }
 .footer a{
     color:#777;
     text-decoration:none;
 }
-.footer a:hover{text-decoration:underline;}
-.hidden{display:none;}
+.footer a:hover{ text-decoration:underline; }
+
+.hidden{ display:none; }
+
+/* ===== SUCCESS PAGE ===== */
 .success{
+    min-height:220px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
     text-align:center;
     font-size:16px;
+}
+
+/* ===== CHECKMARK ANIMATION (CONFIRM WORK) ===== */
+.checkmark{
+    width:90px;
+    height:90px;
+    border-radius:50%;
+    display:block;
+    stroke-width:4;
+    stroke:#28a745;
+    stroke-miterlimit:10;
+    margin-bottom:15px;
+    box-shadow: inset 0 0 0 #28a745;
+    animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+}
+.checkmark circle{
+    stroke-dasharray:166;
+    stroke-dashoffset:166;
+    animation: stroke .6s cubic-bezier(.65,0,.45,1) forwards;
+}
+.checkmark path{
+    stroke-dasharray:48;
+    stroke-dashoffset:48;
+    animation: stroke .3s cubic-bezier(.65,0,.45,1) .6s forwards;
+}
+@keyframes stroke{
+    100%{ stroke-dashoffset:0; }
+}
+@keyframes scale{
+    50%{ transform:scale(1.1); }
+}
+@keyframes fill{
+    100%{ box-shadow: inset 0 0 0 45px #28a745; }
+}
+
+.close-note{
+    margin-top:10px;
+    font-size:13px;
+    color:#666;
 }
 </style>
 </head>
 
 <body>
 
-<!-- FORM PAGE -->
+<!-- ================= FORM PAGE ================= -->
 <div class="container" id="formPage">
-<h2>AGENCY CONSENT FORM</h2>
+    <h2>AGENCY CONSENT FORM</h2>
 
-<label>AGENCY NAME</label>
-<input id="agency" type="text" required>
+    <label>AGENCY NAME</label>
+    <input id="agency" type="text" required>
 
-<label>PIC NAME 1</label>
-<input id="pic1" type="text" required>
+    <label>PIC NAME 1</label>
+    <input id="pic1" type="text" required>
 
-<label>PIC NAME 2</label>
-<input id="pic2" type="text">
+    <label>PIC NAME 2</label>
+    <input id="pic2" type="text">
 
-<label>CONTACT NO</label>
-<input id="contact" type="text" placeholder="+60123456789" oninput="formatPhone(this)" required>
+    <label>CONTACT NO</label>
+    <input id="contact" type="text" placeholder="+60123456789"
+           oninput="formatPhone(this)" required>
 
-<label>WHATSAPP NO</label>
-<input id="whatsapp" type="text" placeholder="+60123456789" oninput="formatPhone(this)" required>
+    <label>WHATSAPP NO</label>
+    <input id="whatsapp" type="text" placeholder="+60123456789"
+           oninput="formatPhone(this)" required>
 
-<div class="consent">
-    <label>
-        <input type="checkbox" id="agree" onchange="toggleSend()">
-        I hereby confirm that the information provided is true and I give my consent
-        for this information to be collected and used for official purposes.
-    </label>
+    <div class="consent">
+        <label>
+            <input type="checkbox" id="agree" onchange="toggleSend()">
+            I hereby confirm that the information provided is true and I give my
+            consent for this information to be collected and used for official purposes.
+        </label>
+    </div>
+
+    <br>
+    <button id="sendBtn" onclick="sendData()" disabled>SEND</button>
+
+    <div class="footer">
+        © <a href="https://sczpnet.org" target="_blank">sczpnet.org</a>
+        <span id="year"></span>
+    </div>
 </div>
 
-<br>
-<button id="sendBtn" disabled onclick="sendData()">SEND</button>
-
-<div class="footer">
-    © <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> 
-    <span id="year"></span>
-</div>
-</div>
-
-<!-- SUCCESS PAGE -->
+<!-- ================= SUCCESS PAGE ================= -->
 <div class="container hidden" id="successPage">
     <div class="success">
 
-        <!-- ANIMATED TICK -->
         <svg class="checkmark" viewBox="0 0 52 52">
-            <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
-            <path class="checkmark__check" fill="none"
-                  d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+            <circle cx="26" cy="26" r="25" fill="none"/>
+            <path fill="none" d="M14 27l7 7 17-17"/>
         </svg>
 
-        <b>YOUR INFORMATION HAS BEEN<br>SUCCESSFULLY SENT</b><br><br>
+        <b>YOUR INFORMATION HAS BEEN<br>SUCCESSFULLY SENT</b><br>
         THANK YOU
 
         <div class="close-note">
@@ -148,22 +203,21 @@ button:disabled{
     </div>
 </div>
 
-
 <script>
-// YEAR AUTO
+// AUTO YEAR
 const y = new Date().getFullYear();
-year.innerText = y;
-year2.innerText = y;
+document.getElementById("year").innerText = y;
+document.getElementById("year2").innerText = y;
 
-// ENABLE SEND
+// CONSENT ENABLE
 function toggleSend(){
     const btn = document.getElementById("sendBtn");
-    const agree = document.getElementById("agree").checked;
-    btn.disabled = !agree;
-    btn.classList.toggle("enabled", agree);
+    const ok = document.getElementById("agree").checked;
+    btn.disabled = !ok;
+    btn.classList.toggle("enabled", ok);
 }
 
-// PHONE FORMAT
+// PHONE FORMAT (+60)
 function formatPhone(el){
     let v = el.value.replace(/\D/g,'');
     if(v.startsWith('0')) v = '6' + v;
@@ -185,9 +239,9 @@ function sendData(){
         method:"POST",
         body:JSON.stringify(data)
     })
-    .then(() => {
-        formPage.classList.add("hidden");
-        successPage.classList.remove("hidden");
+    .then(()=>{
+        document.getElementById("formPage").style.display="none";
+        document.getElementById("successPage").style.display="block";
     })
     .catch(()=>{
         alert("Submission failed. Please try again.");
