--- a/index.html
+++ b/index.html
@@ -2,251 +2,191 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Agency Consent Form</title>
+<title>Agency Information Submission</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-/* ===== BASE ===== */
-body{
-    margin:0;
-    font-family:"Segoe UI", Arial, sans-serif;
-    background:linear-gradient(135deg,#eef2f7,#f8fafc);
+body {
+  font-family: Arial, sans-serif;
+  background: #f4f6f8;
+  padding: 20px;
 }
-.container{
-    max-width:520px;
-    margin:50px auto;
-    background:#fff;
-    padding:30px;
-    border-radius:14px;
-    box-shadow:0 20px 35px rgba(0,0,0,.12);
+.container {
+  max-width: 420px;
+  margin: auto;
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-h2{
-    text-align:center;
-    letter-spacing:1px;
-    margin-bottom:20px;
+h2 {
+  text-align: center;
 }
-label{
-    font-weight:600;
-    font-size:14px;
-}
-input[type=text]{
-    width:100%;
-    padding:12px;
-    border-radius:8px;
-    border:1px solid #ccc;
-    margin-top:6px;
-    margin-bottom:15px;
-    text-transform:uppercase;
-    font-size:14px;
-}
-input:focus{
-    outline:none;
-    border-color:#007bff;
+label {
+  font-weight: bold;
 }
 
-/* ===== CONSENT ===== */
-.consent{
-    background:#f1f5f9;
-    padding:12px;
-    border-radius:8px;
-    font-size:13px;
-}
-.consent input{
-    width:auto;
-    margin-right:6px;
+input[type="text"],
+input[type="tel"] {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-transform: uppercase;
 }
 
-/* ===== BUTTON ===== */
-button{
-    width:100%;
-    padding:13px;
-    border-radius:8px;
-    border:none;
-    font-size:15px;
-    font-weight:bold;
-    background:#007bff;
-    color:#fff;
-    opacity:.45;
-    cursor:not-allowed;
-}
-button.enabled{
-    opacity:1;
-    cursor:pointer;
+.consent {
+  font-size: 13px;
+  margin-bottom: 15px;
 }
 
-/* ===== FOOTER ===== */
-.footer{
-    text-align:center;
-    font-size:12px;
-    margin-top:22px;
-    color:#777;
+button {
+  width: 100%;
+  padding: 12px;
+  background: #1e88e5;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  opacity: 0.6;
+  cursor: not-allowed;
 }
-.footer a{
-    color:#777;
-    text-decoration:none;
-}
-.footer a:hover{ text-decoration:underline; }
-
-.hidden{ display:none; }
-
-/* ===== SUCCESS PAGE ===== */
-.success{
-    min-height:220px;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    font-size:16px;
+button.enabled {
+  opacity: 1;
+  cursor: pointer;
 }
 
-/* ===== CHECKMARK ANIMATION (CONFIRM WORK) ===== */
-.checkmark{
-    width:90px;
-    height:90px;
-    border-radius:50%;
-    display:block;
-    stroke-width:4;
-    stroke:#28a745;
-    stroke-miterlimit:10;
-    margin-bottom:15px;
-    box-shadow: inset 0 0 0 #28a745;
-    animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
-}
-.checkmark circle{
-    stroke-dasharray:166;
-    stroke-dashoffset:166;
-    animation: stroke .6s cubic-bezier(.65,0,.45,1) forwards;
-}
-.checkmark path{
-    stroke-dasharray:48;
-    stroke-dashoffset:48;
-    animation: stroke .3s cubic-bezier(.65,0,.45,1) .6s forwards;
-}
-@keyframes stroke{
-    100%{ stroke-dashoffset:0; }
-}
-@keyframes scale{
-    50%{ transform:scale(1.1); }
-}
-@keyframes fill{
-    100%{ box-shadow: inset 0 0 0 45px #28a745; }
+.note {
+  font-size: 12px;
+  color: #666;
+  text-align: center;
+  margin-top: 10px;
 }
 
-.close-note{
-    margin-top:10px;
-    font-size:13px;
-    color:#666;
+.ref {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+/* TRADEMARK */
+.trademark {
+  text-align: center;
+  font-size: 11px;
+  color: #999;
+  margin-top: 25px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- ================= FORM PAGE ================= -->
-<div class="container" id="formPage">
-    <h2>AGENCY CONSENT FORM</h2>
+<!-- FORM -->
+<div class="container" id="formBox">
+  <h2>📄 Agency Information Form</h2>
 
-    <label>AGENCY NAME</label>
-    <input id="agency" type="text" required>
+  <form onsubmit="return submitForm();">
 
-    <label>PIC NAME 1</label>
-    <input id="pic1" type="text" required>
+    <label>Agency Name</label>
+    <input type="text" id="agency" required>
 
-    <label>PIC NAME 2</label>
-    <input id="pic2" type="text">
+    <label>PIC Name 1</label>
+    <input type="text" id="pic1" required>
 
-    <label>CONTACT NO</label>
-    <input id="contact" type="text" placeholder="+60123456789"
-           oninput="formatPhone(this)" required>
+    <label>PIC Name 2</label>
+    <input type="text" id="pic2">
 
-    <label>WHATSAPP NO</label>
-    <input id="whatsapp" type="text" placeholder="+60123456789"
-           oninput="formatPhone(this)" required>
+    <label>Contact No</label>
+    <input type="tel" id="contact" placeholder="60123456789" required>
+
+    <label>WhatsApp No</label>
+    <input type="tel" id="whatsapp" placeholder="60123456789" required>
 
     <div class="consent">
-        <label>
-            <input type="checkbox" id="agree" onchange="toggleSend()">
-            I hereby confirm that the information provided is true and I give my
-            consent for this information to be collected and used for official purposes.
-        </label>
+      <input type="checkbox" id="consent" onclick="toggleBtn()">
+      I hereby confirm that all information provided is true and accurate.
+      I give consent for this information to be recorded and used for official
+      agency communication and record purposes.
     </div>
 
-    <br>
-    <button id="sendBtn" onclick="sendData()" disabled>SEND</button>
+    <button type="submit" id="submitBtn" disabled>Submit</button>
+  </form>
 
-    <div class="footer">
-        © <a href="https://sczpnet.org" target="_blank">sczpnet.org</a>
-        <span id="year"></span>
-    </div>
+  <div class="note">Information will be securely recorded</div>
 </div>
 
-<!-- ================= SUCCESS PAGE ================= -->
-<div class="container hidden" id="successPage">
-    <div class="success">
-
-        <svg class="checkmark" viewBox="0 0 52 52">
-            <circle cx="26" cy="26" r="25" fill="none"/>
-            <path fill="none" d="M14 27l7 7 17-17"/>
-        </svg>
-
-        <b>YOUR INFORMATION HAS BEEN<br>SUCCESSFULLY SENT</b><br>
-        THANK YOU
-
-        <div class="close-note">
-            You may close this page.
-        </div>
-    </div>
-
-    <div class="footer">
-        © <a href="https://sczpnet.org" target="_blank">sczpnet.org</a>
-        <span id="year2"></span>
-    </div>
+<!-- SUCCESS -->
+<div class="container" id="successBox" style="display:none;text-align:center;">
+  <h2>✅ Submission Successful</h2>
+  <div class="ref" id="refDisplay"></div>
+  <p style="font-size:12px;color:#666;">
+    Please keep this reference number for future reference.
+  </p>
 </div>
+
+<!-- TRADEMARK -->
+<div class="trademark" id="trademark"></div>
 
 <script>
-// AUTO YEAR
-const y = new Date().getFullYear();
-document.getElementById("year").innerText = y;
-document.getElementById("year2").innerText = y;
+let IS_SUBMITTED = false;
 
-// CONSENT ENABLE
-function toggleSend(){
-    const btn = document.getElementById("sendBtn");
-    const ok = document.getElementById("agree").checked;
-    btn.disabled = !ok;
-    btn.classList.toggle("enabled", ok);
+/* BUTTON ENABLE */
+function toggleBtn() {
+  const btn = document.getElementById("submitBtn");
+  btn.disabled = !document.getElementById("consent").checked;
+  btn.classList.toggle("enabled", !btn.disabled);
 }
 
-// PHONE FORMAT (+60)
-function formatPhone(el){
-    let v = el.value.replace(/\D/g,'');
-    if(v.startsWith('0')) v = '6' + v;
-    if(!v.startsWith('6')) v = '6' + v;
-    el.value = '+' + v;
+/* REF GENERATOR */
+function generateRef() {
+  const d = new Date();
+  return "AGY-" +
+    d.getFullYear() +
+    String(d.getMonth() + 1).padStart(2, "0") +
+    String(d.getDate()).padStart(2, "0") + "-" +
+    String(d.getHours()).padStart(2, "0") +
+    String(d.getMinutes()).padStart(2, "0") +
+    String(d.getSeconds()).padStart(2, "0");
 }
 
-// SEND DATA
-function sendData(){
-    const data = {
-        agency: agency.value.toUpperCase(),
-        pic1: pic1.value.toUpperCase(),
-        pic2: pic2.value.toUpperCase(),
-        contact: contact.value,
-        whatsapp: whatsapp.value
-    };
+/* SUBMIT */
+function submitForm() {
+  if (IS_SUBMITTED) return false;
+  IS_SUBMITTED = true;
 
-    fetch("YOUR_WEB_APP_URL_HERE",{
-        method:"POST",
-        body:JSON.stringify(data)
-    })
-    .then(()=>{
-        document.getElementById("formPage").style.display="none";
-        document.getElementById("successPage").style.display="block";
-    })
-    .catch(()=>{
-        alert("Submission failed. Please try again.");
-    });
+  const ref = generateRef();
+  const time = new Date().toLocaleString();
+
+  const data = new URLSearchParams();
+  data.append("time", time);
+  data.append("agency", agency.value.toUpperCase());
+  data.append("pic1", pic1.value.toUpperCase());
+  data.append("pic2", pic2.value.toUpperCase());
+  data.append("contact", contact.value);
+  data.append("whatsapp", whatsapp.value);
+  data.append("consent", "YES");
+  data.append("ref", ref);
+  data.append("ua", navigator.userAgent);
+  data.append("lang", navigator.language);
+
+  fetch("PASTE_YOUR_WEB_APP_URL_HERE", {
+    method: "POST",
+    body: data
+  });
+
+  document.getElementById("formBox").style.display = "none";
+  document.getElementById("successBox").style.display = "block";
+  document.getElementById("refDisplay").innerText = "Reference No: " + ref;
+
+  return false;
 }
+
+/* TRADEMARK AUTO YEAR + DOMAIN */
+(function () {
+  const year = new Date().getFullYear();
+  document.getElementById("trademark").innerText =
+    "© " + year + " sczpnet.org · Authorized Access Only";
+})();
 </script>
 
 </body>
