--- a/index.html
+++ b/index.html
@@ -8,40 +8,24 @@
 <style>
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg,#e3f2fd,#f4f6f8);
+  background: #f4f6f8;
   padding: 20px;
 }
 .container {
   max-width: 420px;
   margin: auto;
   background: #ffffff;
-  padding: 22px;
-  border-radius: 10px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 h2 {
   text-align: center;
-  margin-bottom: 5px;
-}
-
-/* LOGO */
-.logo {
-  text-align: center;
   margin-bottom: 10px;
 }
-.logo span {
-  display: inline-block;
-  padding: 10px 18px;
-  border-radius: 30px;
-  background: #1e88e5;
-  color: #fff;
+label {
   font-weight: bold;
-  letter-spacing: 1px;
-  font-size: 14px;
 }
-
-/* FORM */
-label { font-weight: bold; }
 
 input[type="text"],
 input[type="tel"] {
@@ -49,7 +33,7 @@ input[type="tel"] {
   padding: 10px;
   margin: 5px 0 15px;
   border: 1px solid #ccc;
-  border-radius: 6px;
+  border-radius: 5px;
   text-transform: uppercase;
 }
 
@@ -64,29 +48,29 @@ button {
   background: #1e88e5;
   color: white;
   border: none;
-  border-radius: 6px;
+  border-radius: 5px;
   font-size: 16px;
-  opacity: 0.6;
   cursor: not-allowed;
+  opacity: 0.6;
 }
 button.enabled {
-  opacity: 1;
   cursor: pointer;
+  opacity: 1;
 }
 
 /* SUCCESS */
 .successIcon {
   margin: 15px auto;
-  width: 80px;
+  width: 70px;
 }
 .successIcon svg {
   width: 100%;
   animation: pop 0.5s ease;
 }
 @keyframes pop {
-  0% { transform: scale(0.3); opacity:0; }
+  0% { transform: scale(0.3); opacity: 0; }
   80% { transform: scale(1.1); }
-  100% { transform: scale(1); opacity:1; }
+  100% { transform: scale(1); opacity: 1; }
 }
 
 .ref {
@@ -115,12 +99,7 @@ button.enabled {
 
 <!-- FORM -->
 <div class="container" id="formBox">
-
-  <div class="logo">
-    <span>SCZP AGENCY SYSTEM</span>
-  </div>
-
-  <h2>Agency Information Form</h2>
+  <h2>AGENCY INFORMATION SUBMISSION</h2>
 
   <form onsubmit="return submitForm();">
 
@@ -134,15 +113,15 @@ button.enabled {
     <input type="text" id="pic2">
 
     <label>Contact No</label>
-    <input type="tel" id="contact" placeholder="6012 345 6789" required oninput="formatPhone(this)">
+    <input type="tel" id="contact" required oninput="formatPhone(this)">
 
     <label>WhatsApp No</label>
-    <input type="tel" id="whatsapp" placeholder="6012 345 6789" required oninput="formatPhone(this)">
+    <input type="tel" id="whatsapp" required oninput="formatPhone(this)">
 
     <div class="consent">
       <input type="checkbox" id="consent" onclick="toggleBtn()">
-      I hereby confirm that all information provided is true and accurate and
-      I give consent for this information to be recorded for official use.
+      I confirm that the information provided is accurate and consent to its use
+      for official communication purposes.
     </div>
 
     <button type="submit" id="submitBtn" disabled>Submit</button>
@@ -155,7 +134,7 @@ button.enabled {
   <div class="successIcon">
     <svg viewBox="0 0 24 24" fill="none">
       <circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
-      <path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2" fill="none"/>
+      <path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
     </svg>
   </div>
 
@@ -175,24 +154,28 @@ button.enabled {
 <script>
 let IS_SUBMITTED = false;
 
-/* BUTTON */
+/* ENABLE BUTTON */
 function toggleBtn() {
   const btn = document.getElementById("submitBtn");
   btn.disabled = !document.getElementById("consent").checked;
   btn.classList.toggle("enabled", !btn.disabled);
 }
 
-/* PHONE FORMAT */
+/* PHONE FORMAT – AUTO ADD 6, NO SPACES */
 function formatPhone(el) {
-  let v = el.value.replace(/\D/g,'');
-  if (v.startsWith("60")) {
-    el.value = v.replace(/(\d{2})(\d{1,4})(\d{1,4})/, "$1 $2 $3").trim();
-  } else {
-    el.value = v;
+  let v = el.value.replace(/\D/g, '');
+
+  if (v.startsWith("0")) {
+    v = "6" + v;
   }
+  if (!v.startsWith("6")) {
+    v = "6" + v;
+  }
+
+  el.value = v;
 }
 
-/* REF */
+/* REF GENERATOR */
 function generateRef() {
   const d = new Date();
   return "AGY-" +
@@ -215,8 +198,8 @@ function submitForm() {
   data.append("agency", agency.value.toUpperCase());
   data.append("pic1", pic1.value.toUpperCase());
   data.append("pic2", pic2.value.toUpperCase());
-  data.append("contact", contact.value.replace(/\s/g,''));
-  data.append("whatsapp", whatsapp.value.replace(/\s/g,''));
+  data.append("contact", contact.value);
+  data.append("whatsapp", whatsapp.value);
   data.append("consent", "YES");
   data.append("ref", ref);
 
@@ -227,13 +210,14 @@ function submitForm() {
 
   document.getElementById("formBox").style.display = "none";
   document.getElementById("successBox").style.display = "block";
-  document.getElementById("refDisplay").innerText = "Reference No: " + ref;
+  document.getElementById("refDisplay").innerText =
+    "Reference No: " + ref;
 
   return false;
 }
 
-/* TRADEMARK */
-(function(){
+/* TRADEMARK AUTO YEAR + LINK */
+(function () {
   const year = new Date().getFullYear();
   document.getElementById("trademark").innerHTML =
     '© ' + year + ' <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · Authorized Access Only';
