--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@ input[type="tel"] {
   text-transform: uppercase;
 }
 
+::placeholder {
+  text-transform: none;
+  color: #999;
+}
+
 .consent {
   font-size: 13px;
   margin-bottom: 15px;
@@ -73,24 +78,45 @@ button.enabled {
   100% { transform: scale(1); opacity: 1; }
 }
 
+.summary {
+  text-align: left;
+  font-size: 14px;
+  margin-top: 15px;
+}
+.summary div {
+  margin-bottom: 6px;
+}
+
 .ref {
   font-weight: bold;
   margin-top: 10px;
 }
 
-/* TRADEMARK */
-.trademark {
+/* FOOTER */
+.footer {
+  margin-top: 30px;
   text-align: center;
   font-size: 11px;
-  color: #999;
-  margin-top: 25px;
+  color: #888;
 }
-.trademark a {
-  color: #999;
+.footer a {
+  color: #888;
   text-decoration: none;
 }
-.trademark a:hover {
+.footer a:hover {
   text-decoration: underline;
+}
+
+.divider {
+  height: 2px;
+  background: linear-gradient(to right, transparent, #1e88e5, transparent);
+  margin-bottom: 10px;
+}
+
+.privacy {
+  font-size: 11px;
+  color: #777;
+  margin-top: 6px;
 }
 </style>
 </head>
@@ -99,24 +125,24 @@ button.enabled {
 
 <!-- FORM -->
 <div class="container" id="formBox">
-  <h2>AGENCY INFORMATION SUBMISSION</h2>
+  <h2>📄 AGENCY INFORMATION SUBMISSION</h2>
 
   <form onsubmit="return submitForm();">
 
     <label>Agency Name</label>
-    <input type="text" id="agency" required>
+    <input type="text" id="agency" placeholder="Example: ABC COLLECTION AGENCY" required>
 
     <label>PIC Name 1</label>
-    <input type="text" id="pic1" required>
+    <input type="text" id="pic1" placeholder="Example: AHMAD BIN ALI" required>
 
     <label>PIC Name 2</label>
-    <input type="text" id="pic2">
+    <input type="text" id="pic2" placeholder="Example: SITI BINTI AMINAH">
 
     <label>Contact No</label>
-    <input type="tel" id="contact" required oninput="formatPhone(this)">
+    <input type="tel" id="contact" placeholder="Example: 0123456789" required oninput="formatPhone(this)">
 
     <label>WhatsApp No</label>
-    <input type="tel" id="whatsapp" required oninput="formatPhone(this)">
+    <input type="tel" id="whatsapp" placeholder="Example: 0123456789" required oninput="formatPhone(this)">
 
     <div class="consent">
       <input type="checkbox" id="consent" onclick="toggleBtn()">
@@ -142,40 +168,42 @@ button.enabled {
 
   <div class="ref" id="refDisplay"></div>
 
+  <div class="summary" id="summaryBox"></div>
+
   <p style="font-size:13px;color:#555;margin-top:10px;">
-    Your information has been successfully recorded.<br>
-    <b>You may safely close this page.</b>
+    You may safely close this page.
   </p>
 </div>
 
-<!-- TRADEMARK -->
-<div class="trademark" id="trademark"></div>
+<!-- FOOTER -->
+<div class="footer">
+  <div class="divider"></div>
+  <div id="trademark"></div>
+  <div class="privacy">
+    Information submitted is collected solely for communication and
+    administrative record purposes.
+  </div>
+</div>
 
 <script>
 let IS_SUBMITTED = false;
 
-/* ENABLE BUTTON */
+/* BUTTON */
 function toggleBtn() {
   const btn = document.getElementById("submitBtn");
   btn.disabled = !document.getElementById("consent").checked;
   btn.classList.toggle("enabled", !btn.disabled);
 }
 
-/* PHONE FORMAT – AUTO ADD 6, NO SPACES */
+/* PHONE FORMAT */
 function formatPhone(el) {
-  let v = el.value.replace(/\D/g, '');
-
-  if (v.startsWith("0")) {
-    v = "6" + v;
-  }
-  if (!v.startsWith("6")) {
-    v = "6" + v;
-  }
-
+  let v = el.value.replace(/\D/g,'');
+  if (v.startsWith("0")) v = "6" + v;
+  if (!v.startsWith("6")) v = "6" + v;
   el.value = v;
 }
 
-/* REF GENERATOR */
+/* REF */
 function generateRef() {
   const d = new Date();
   return "AGY-" +
@@ -194,12 +222,18 @@ function submitForm() {
 
   const ref = generateRef();
 
+  const a = agency.value.toUpperCase();
+  const p1 = pic1.value.toUpperCase();
+  const p2 = pic2.value.toUpperCase();
+  const c = contact.value;
+  const w = whatsapp.value;
+
   const data = new URLSearchParams();
-  data.append("agency", agency.value.toUpperCase());
-  data.append("pic1", pic1.value.toUpperCase());
-  data.append("pic2", pic2.value.toUpperCase());
-  data.append("contact", contact.value);
-  data.append("whatsapp", whatsapp.value);
+  data.append("agency", a);
+  data.append("pic1", p1);
+  data.append("pic2", p2);
+  data.append("contact", c);
+  data.append("whatsapp", w);
   data.append("consent", "YES");
   data.append("ref", ref);
 
@@ -210,17 +244,23 @@ function submitForm() {
 
   document.getElementById("formBox").style.display = "none";
   document.getElementById("successBox").style.display = "block";
-  document.getElementById("refDisplay").innerText =
-    "Reference No: " + ref;
+  document.getElementById("refDisplay").innerText = "Reference No: " + ref;
+
+  document.getElementById("summaryBox").innerHTML =
+    "<div><b>Agency:</b> " + a + "</div>" +
+    "<div><b>PIC Name 1:</b> " + p1 + "</div>" +
+    (p2 ? "<div><b>PIC Name 2:</b> " + p2 + "</div>" : "") +
+    "<div><b>Contact No:</b> " + c + "</div>" +
+    "<div><b>WhatsApp No:</b> " + w + "</div>";
 
   return false;
 }
 
-/* TRADEMARK AUTO YEAR + LINK */
+/* FOOTER TEXT */
 (function () {
   const year = new Date().getFullYear();
   document.getElementById("trademark").innerHTML =
-    '© ' + year + ' <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · Authorized Access Only';
+    '© ' + year + ' <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · For Authorized Agency Use';
 })();
 </script>
 
