--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@ button.enabled {
   <form onsubmit="return submitForm();">
 
     <label>Agency Name</label>
-    <input type="text" id="agency" placeholder="Example: ABC COLLECTION AGENCY" required>
+    <input type="text" id="agency" placeholder="Example: ABC DEBT SDN BHD" required>
 
     <label>PIC Name 1</label>
-    <input type="text" id="pic1" placeholder="Example: AHMAD BIN ALI" required>
+    <input type="text" id="pic1" placeholder="Example: MR JOHN DOE" required>
 
     <label>PIC Name 2</label>
-    <input type="text" id="pic2">
+    <input type="text" id="pic2" placeholder="Example: MISS JANE DOE " required>
 
     <label>Contact No</label>
     <input type="tel" id="contact" placeholder="Example: 0123456789" required oninput="formatPhone(this)">
